samples/_failures_safe/1761089315_ac9270_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36d34d30.c: In function ‘main’:
./samples/SAFE/__tmp_36d34d30.c:163:42: error: expected ‘)’ at end of input
  163 |     for (size_t i = 0; i < token_count; i
      |         ~                                ^
      |                                          )
./samples/SAFE/__tmp_36d34d30.c:163:5: error: expected declaration or statement at end of input
  163 |     for (size_t i = 0; i < token_count; i
      |     ^~~
